Fixed add to basket button on mobile.

--- a/app/styles/scss/_buttons.scss
+++ b/app/styles/scss/_buttons.scss
@@ -1,6 +1,6 @@
 .btn {
   text-transform: uppercase;
-  font-size: 0.875em;
+  font-size: 0.675em;
   height: 50px;
   width: 200px;
   text-align: center;
