--- a/app/styles/scss/_product.scss
+++ b/app/styles/scss/_product.scss
@@ -159,6 +159,7 @@
           .cards-wrapper {
             display: flex;
             align-items: flex-start;
+            padding: 0;
             img {
               width: 25%;
               margin-right: 0;
